--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "react-dom": "^19.0.0",
     "react-router": "^7.5.1",
     "react-router-dom": "^7.5.1",
+    "tailwind-merge": "^3.3.0",
     "tailwindcss": "^4.1.3",
     "uuid": "^11.1.0",
     "zustand": "^5.0.3"
