--- a/backend/package.json
+++ b/backend/package.json
@@ -9,14 +9,16 @@
 		"start": "node dist/server.js"
 	},
 	"dependencies": {
+		"bcrypt": "^6.0.0",
 		"cors": "^2.8.5",
-		"dotenv": "^16.5.0",
+		"dotenv": "^17.0.0",
 		"express": "^5.1.0"
 	},
 	"devDependencies": {
-		"@types/cors": "^2.8.18",
-		"@types/express": "^5.0.2",
-		"@types/node": "^22.15.21",
+		"@types/bcrypt": "^5.0.2",
+		"@types/cors": "^2.8.19",
+		"@types/express": "^5.0.3",
+		"@types/node": "^24.0.7",
 		"nodemon": "^3.1.10",
 		"ts-node": "^10.9.2",
 		"typescript": "^5.8.3"
