--- a/frontend/package.json
+++ b/frontend/package.json
@@ -1,39 +1,40 @@
 {
-  "name": "modimal",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "vite",
-    "build": "tsc -b && vite build",
-    "lint": "eslint .",
-    "preview": "vite preview"
-  },
-  "dependencies": {
-    "@tailwindcss/vite": "^4.1.10",
-    "clsx": "^2.1.1",
-    "eslint-plugin-react": "^7.37.5",
-    "motion": "^12.19.1",
-    "react": "^19.1.0",
-    "react-dom": "^19.1.0",
-    "react-hook-form": "^7.59.0",
-    "react-router": "^7.6.2",
-    "tailwind-merge": "^3.3.1",
-    "tailwindcss": "^4.1.10",
-    "uuid": "^11.1.0",
-    "zustand": "^5.0.5"
-  },
-  "devDependencies": {
-    "@eslint/js": "^9.29.0",
-    "@types/react": "^19.1.8",
-    "@types/react-dom": "^19.1.6",
-    "@vitejs/plugin-react": "^4.6.0",
-    "eslint": "^9.29.0",
-    "eslint-plugin-react-hooks": "^5.2.0",
-    "eslint-plugin-react-refresh": "^0.4.20",
-    "globals": "^15.15.0",
-    "typescript": "~5.7.3",
-    "typescript-eslint": "^8.35.0",
-    "vite": "^6.3.5"
-  }
+	"name": "modimal",
+	"private": true,
+	"version": "0.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "vite",
+		"build": "tsc -b && vite build",
+		"lint": "eslint .",
+		"preview": "vite preview"
+	},
+	"dependencies": {
+		"@tailwindcss/vite": "^4.1.10",
+		"clsx": "^2.1.1",
+		"eslint-plugin-react": "^7.37.5",
+		"motion": "^12.19.1",
+		"react": "^19.1.0",
+		"react-dom": "^19.1.0",
+		"react-hook-form": "^7.59.0",
+		"react-router": "^7.6.2",
+		"tailwind-merge": "^3.3.1",
+		"tailwindcss": "^4.1.10",
+		"uuid": "^11.1.0",
+		"zustand": "^5.0.5"
+	},
+	"devDependencies": {
+		"@eslint/js": "^9.29.0",
+		"@types/react": "^19.1.8",
+		"@types/react-dom": "^19.1.6",
+		"@vitejs/plugin-react": "^4.6.0",
+		"eslint": "^9.29.0",
+		"eslint-plugin-react-hooks": "^5.2.0",
+		"eslint-plugin-react-refresh": "^0.4.20",
+		"gh-pages": "^6.3.0",
+		"globals": "^15.15.0",
+		"typescript": "~5.7.3",
+		"typescript-eslint": "^8.35.0",
+		"vite": "^6.3.5"
+	}
 }
